# parameterized-utils

./: .gitignore  .travis.yml  Changelog.md  LICENSE  README.md  parameterized-utils.cabal  stack-8.4.yaml  stack-8.6.yaml
.github/workflows/: doc.yml  test.yml
doc/: dev.md
src/Data/: Parameterized.hs
src/Data/Parameterized/: All.hs  Axiom.hs  BoolRepr.hs  Classes.hs  ClassesC.hs  Compose.hs  Context.hs  Ctx.hs  DataKind.hs  DecidableEq.hs  Fin.hs  FinMap.hs  FreeParamF.hs  HashTable.hs  List.hs  Map.hs  MonoidSolver.hs  NatRepr.hs  Nonce.hs  NonceGenerator.hs  Pair.hs  Peano.hs  SafeContext.hs  SizedMap.hs  SmallArrayF.hs  Some.hs  SymbolRepr.hs  TestEquality.hs  TraversableF.hs  TraversableFC.hs  UnsafeContext.hs  UnsafeContext2.hs  Vector.hs  WithRepr.hs
src/Data/Parameterized/Context/: Elective.hs  Safe.hs  Unsafe.hs
src/Data/Parameterized/Ctx/: Proofs.hs
src/Data/Parameterized/FinMap/: Safe.hs  Unsafe.hs
src/Data/Parameterized/NatRepr/: Internal.hs
src/Data/Parameterized/Nonce/: Strong.hs  Transformers.hs  Unsafe.hs
src/Data/Parameterized/SizedMap/: Safe.hs  Unsafe.hs
src/Data/Parameterized/TH/: GADT.hs
src/Data/Parameterized/TraversableFC/: WithIndex.hs
src/Data/Parameterized/Utils/: BinTree.hs  Endian.hs
src/Data/Parameterized/Utils/BinTree/: Internal.hs
src/Data/Parameterized/Vector/: NonEmpty.hs
src/core/Data/Parameterized/: BoolRepr.hs  Compose.hs  DecidableEq.hs  NatRepr.hs  TraversableF.hs
src/core/Data/Parameterized/Ctx/: Proofs.hs
src/core/Data/Parameterized/NatRepr/: Internal.hs
src/core/Data/Parameterized/Utils/: Endian.hs
src/metasafe/Data/Parameterized/: Peano.hs
src/safe/Data/Parameterized/Context/: Safe.hs
src/unsafe/Data/Parameterized/Context/: Unsafe.hs
test/: UnitTest.hs
test/Test/: Context.hs  Fin.hs  FinMap.hs  List.hs  NatRepr.hs  SizedMap.hs  SmallArrayF.hs  Some.hs  SymbolRepr.hs  TH.hs  Vector.hs
test/Test/Context/: Elective.hs  Rules.hs  RulesCoverage.hs  RulesSemantics.hs
test/Test/List/: Choice.hs
test/Test/SmallArrayF/: Instances.hs  Rules.hs  RulesCoverage.hs  RulesSemantics.hs
test/Test/Vector/: NonEmpty.hs
