Cabal-version: 2.2
Name:          parameterized-utils
Version:       2.1.0.99
Author:        Galois Inc.
Maintainer:    jhendrix@galois.com, kquick@galois.com
stability:     stable
Build-type:    Simple
Copyright:     ©2016-2020 Galois, Inc.
License:       BSD-3-Clause
License-file:  LICENSE
category:      Data Structures, Dependent Types
Synopsis: Classes and data structures for working with data-kind indexed types
Description:
  This package contains collection classes and type representations
  used for working with values that have a single parameter.  It's
  intended for things like expression libraries where one wishes
  to leverage the Haskell type-checker to improve type-safety by encoding
  the object language type system into data kinds.
extra-source-files: Changelog.md
homepage:      https://github.com/GaloisInc/parameterized-utils
bug-reports:   https://github.com/GaloisInc/parameterized-utils/issues
tested-with:   GHC==8.4.4, GHC==8.6.5, GHC==8.8.3, GHC==8.10.1

-- Many (but not all, sadly) uses of unsafe operations are
-- controlled by this compile flag.  When this flag is set
-- to False, alternate implementations are used to avoid
-- Unsafe.Coerce and Data.Coerce.  These alternate implementations
-- impose a significant performance hit.
flag unsafe-operations
  Description: Use unsafe operations (e.g. coercions) to improve performance
  Default: True

source-repository head
  type: git
  location: https://github.com/GaloisInc/parameterized-utils


library pu-core-lib
  build-depends: base >= 4.10 && < 5
               , base-orphans   >=0.8.2 && <0.9
               , hashable       >=1.2  && <1.4
               , lens           >=4.16 && <4.20
               , mtl
               , text
               , vector         ==0.12.*

  hs-source-dirs: src/core

  exposed-modules:
    Data.Parameterized.BoolRepr
    Data.Parameterized.Classes
    Data.Parameterized.Compose
    Data.Parameterized.Ctx
    Data.Parameterized.Ctx.Proofs
    Data.Parameterized.DecidableEq
    Data.Parameterized.List
    Data.Parameterized.NatRepr
    Data.Parameterized.Some
    Data.Parameterized.SymbolRepr
    Data.Parameterized.TraversableF
    Data.Parameterized.TraversableFC
    Data.Parameterized.Utils.Endian
    Data.Parameterized.Vector

  other-modules:
    Data.Parameterized.NatRepr.Internal

  ghc-options: -Wall
  default-language: Haskell2010


common defs
  build-depends: base >= 4.10 && < 5
               , hashable       >=1.2  && <1.4
               , lens           >=4.16 && <4.20
               , mtl
  ghc-options: -Wall
  default-language: Haskell2010


library pu-unsafe-lib
  import: defs
  build-depends: pu-core-lib
               , constraints    >=0.10 && <0.13
               , deepseq
               , vector         ==0.12.*

  hs-source-dirs: src/metasafe
                , src/unsafe

  exposed-modules:
    Data.Parameterized.Context
    Data.Parameterized.Peano
    Data.Parameterized.WithRepr

  other-modules:
    Data.Parameterized.Context.Unsafe

  reexported-modules:
      Data.Parameterized.BoolRepr
    , Data.Parameterized.Classes
    , Data.Parameterized.Compose
    , Data.Parameterized.Ctx
    , Data.Parameterized.Ctx.Proofs
    , Data.Parameterized.DecidableEq
    , Data.Parameterized.List
    , Data.Parameterized.NatRepr
    , Data.Parameterized.Some
    , Data.Parameterized.SymbolRepr
    , Data.Parameterized.TraversableF
    , Data.Parameterized.TraversableFC
    , Data.Parameterized.Utils.Endian
    , Data.Parameterized.Vector

  cpp-options: -DUNSAFE_OPS

library pu-safe-lib
  import: defs
  build-depends: pu-core-lib
               , deepseq
               , vector         ==0.12.*

  hs-source-dirs: src/metasafe
                , src/safe

  exposed-modules:
    Data.Parameterized.Context
    Data.Parameterized.Peano
    Data.Parameterized.WithRepr

  other-modules:
    Data.Parameterized.Context.Safe

  reexported-modules:
      Data.Parameterized.BoolRepr
    , Data.Parameterized.Classes
    , Data.Parameterized.Compose
    , Data.Parameterized.Ctx
    , Data.Parameterized.Ctx.Proofs
    , Data.Parameterized.DecidableEq
    , Data.Parameterized.List
    , Data.Parameterized.NatRepr
    , Data.Parameterized.Some
    , Data.Parameterized.SymbolRepr
    , Data.Parameterized.TraversableF
    , Data.Parameterized.TraversableFC
    , Data.Parameterized.Utils.Endian
    , Data.Parameterized.Vector


library
  import: defs
  build-depends: containers
               , hashtables     ==1.2.*
               , template-haskell
               , th-abstraction >=0.3  && <0.4

  hs-source-dirs: src

  exposed-modules:
    Data.Parameterized
    Data.Parameterized.All
    Data.Parameterized.ClassesC
    Data.Parameterized.DataKind
    Data.Parameterized.HashTable
    Data.Parameterized.Map
    Data.Parameterized.Nonce
    Data.Parameterized.Nonce.Transformers
    Data.Parameterized.Nonce.Unsafe
    Data.Parameterized.Pair
    Data.Parameterized.TH.GADT
    Data.Parameterized.Utils.BinTree

  reexported-modules:
      Data.Parameterized.BoolRepr
    , Data.Parameterized.Classes
    , Data.Parameterized.Compose
    , Data.Parameterized.Context
    , Data.Parameterized.Ctx
    , Data.Parameterized.Ctx.Proofs
    , Data.Parameterized.DecidableEq
    , Data.Parameterized.List
    , Data.Parameterized.NatRepr
    , Data.Parameterized.Peano
    , Data.Parameterized.Some
    , Data.Parameterized.SymbolRepr
    , Data.Parameterized.TraversableF
    , Data.Parameterized.TraversableFC
    , Data.Parameterized.Utils.Endian
    , Data.Parameterized.Vector
    , Data.Parameterized.WithRepr

  if flag(unsafe-operations)
    build-depends: pu-unsafe-lib
  else
    build-depends: pu-safe-lib


test-suite parameterizedTestsSafe
  type: exitcode-stdio-1.0
  hs-source-dirs: test

  ghc-options: -Wall
  default-language: Haskell2010

  main-is: UnitTest.hs
  other-modules:
    Test.Context
    Test.NatRepr
    Test.Vector

  build-depends: base
               , pu-safe-lib
               , parameterized-utils
               , hashable
               , hashtables
               , hedgehog
               , ghc-prim
               , lens
               , mtl
               , parameterized-utils
               , tasty == 1.2.*
               , tasty-ant-xml == 1.1.*
               , tasty-hunit >= 0.9 && < 0.11
               , tasty-hedgehog

  mixins:
      parameterized-utils (Data.Parameterized.Context as Data.Parameterized.UnusedContext)

test-suite parameterizedTestsUnsafe
  type: exitcode-stdio-1.0
  hs-source-dirs: test

  ghc-options: -Wall
  cpp-options: -DUNSAFE_OPS
  default-language: Haskell2010

  main-is: UnitTest.hs
  other-modules:
    Test.Context
    Test.NatRepr
    Test.Vector

  build-depends: base
               , pu-unsafe-lib
               , parameterized-utils
               , hashable
               , hashtables
               , hedgehog
               , ghc-prim
               , lens
               , mtl
               , parameterized-utils
               , tasty == 1.2.*
               , tasty-ant-xml == 1.1.*
               , tasty-hunit >= 0.9 && < 0.11
               , tasty-hedgehog

  mixins:
      parameterized-utils (Data.Parameterized.Context as Data.Parameterized.UnusedContext)
